update callGlobalObjects functions

--- a/megaPlayListXXX.web/templates/html/Layout_Player.html
+++ b/megaPlayListXXX.web/templates/html/Layout_Player.html
@@ -32,7 +32,7 @@
 					</ul>							
 				</div>
 				<div class="playlist-footer general-sep-h">
-					<span class="playlist-count"><span class="playlist_count">0</span> playlists</span>
+					<span class="playlist-count"><span class="playlist_count_num">0</span> playlists</span>
 				</div>
 			</div>
 			<div class="songslist general-sep" id="songslist-thelist"></div>
