jump to next song + shuffle + repeat + mark song as selected

--- a/megaPlayListXXX.web/templates/css/player.css
+++ b/megaPlayListXXX.web/templates/css/player.css
@@ -352,7 +352,10 @@ body {
 
 					.IPlayer .workspace .tab-playlist .songslist ul li:hover {
 						background:#12394d;
+					}
 
+					.IPlayer .workspace .tab-playlist .songslist ul li.selected {
+						background:#313131;
 					}
 			
 
