--- a/megaPlayListXXX.web/templates/html/Layout_Player.html
+++ b/megaPlayListXXX.web/templates/html/Layout_Player.html
@@ -15,7 +15,6 @@
 				<li><span class="settings"><!-- //--></span></li>
 			</ul>
 			<span class="login-status">Logged as nachum ginat</span>
-
 		</div>
 	</div>
 	<div class="workspace">
@@ -58,8 +57,9 @@
 			<div class="box">
 				<div class="box-side l"></div>
 				<div class="box-side c">
-					
-					<span class="icon ico-play"><!-- //--></span>
+
+                    <span class="icon ico-shuffle"><!-- //--></span><span class="icon ico-repeat"><!-- //--></span><span class="icon ico-play disabled"><!-- //--></span>
+
 					<div class="loudspeaker">
 						<span class="icon ico-loudspeaker"><!-- //--></span>
 						<div class="sound-controller">
