--- a/megaPlayListXXX.web/templates/html/Layout_Player.html
+++ b/megaPlayListXXX.web/templates/html/Layout_Player.html
@@ -36,9 +36,9 @@
 			</div>
 			<div class="songslist general-sep" id="songslist-thelist"></div>
 			<div class="socialarea">
-				<div style="margin-top:5px;">
-					Social
-				</div>
+                <ul id="lstSocialFeeds">
+
+                </ul>
 			</div>
 		</div>
 	</div>
@@ -71,6 +71,9 @@
 				</div>
 				<div class="box-side r"></div>
 			</div>
+            <div class="status">
+
+            </div>
 		</div>
 		<div class="thumbnail" id="CurrentSongInfo">
 			<img class="song-thumbnail" alt="" />
