--- a/megaPlayListXXX.web/templates/html/Layout_Player.html
+++ b/megaPlayListXXX.web/templates/html/Layout_Player.html
@@ -43,8 +43,9 @@
 		</div>
 	</div>
 	<div class="footer">
-		<div class="progress-bar">
+		<div class="progress-bar" id="ProgressBar">
 			<div class="fill-container"><div class="fill" id="ProgressFill"></div></div>
+            <div class="fill-pointer" id="fill-pointer"><!-- //--></div>
 			<div class="buffer-container"><div class="buffer"  id="ProgressBuffer"></div></div>
 			<div class="pix"></div>
 			<div class="pix2"></div>
